--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-next": "^15.5.12",
     "jsdom": "^28.0.0",
     "shadcn": "^3.8.4",
+    "supabase": "^2.76.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
