feat: complete epic 5 (snapshots & visual diffs) and project-wide stability fixes
Core Changes:
- Implemented Prompt Snapshots (saving, listing, and re-resolution hydration).
- Developed Visual Diff engine with client-side calculation and IntelliJ-style UI.
- Optimized UI density for 400px sidecar usage across all new features.
- Achieved 100% test pass rate (114 tests) with project-wide TypeScript and Linting fixes.
- Updated Supabase migrations for snapshots and enhanced search RPC.

Verification:
- NFR9 compliance verified (<50ms hydration).
- Accessibility validated for keyboard-first 'D' (Diff) and 'Esc' (Close) shortcuts.
- Final validation report generated.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2026-02-08
+# generated: 2026-02-11
 # project: prompt-repo
 # project_key: NOKEY
 # tracking_system: file-system
@@ -33,34 +33,44 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2026-02-08
+generated: 2026-02-11
 project: prompt-repo
 project_key: NOKEY
 tracking_system: file-system
 story_location: _bmad-output/implementation-artifacts
 
 development_status:
-  epic-1: in-progress
+  epic-1: done
   1-1-project-initialization-foundation: done
   1-2-database-foundation-multi-tenant-rls: done
   1-3-secure-authentication-oauth-email: done
   1-4-user-profile-management: done
   epic-1-retrospective: done
-  epic-2: in-progress
+
+  epic-2: done
   2-1-prompt-database-schema-two-table-pattern: done
   2-2-create-versioned-save-logic: done
   2-3-prompt-list-detail-view: done
   2-4-version-history-restoration: done
   epic-2-retrospective: optional
+
   epic-3: done
   3-1-variable-detection-regex-parser: done
   3-2-dynamic-resolution-form-just-in-time-ui: done
   3-3-real-time-resolved-preview: done
   3-4-one-click-copy-clipboard-feedback: done
   epic-3-retrospective: optional
-  epic-4: in-progress
+
+  epic-4: done
   4-1-high-performance-full-text-search: done
   4-2-global-command-palette-cmd-k: done
   4-3-collections-management: done
   4-4-ui-density-sidebar-resilience: done
-  epic-4-retrospective: optional
+  epic-4-retrospective: done
+
+  epic-5: done
+  5-1-snapshot-database-schema-rls: done
+  5-2-save-snapshot-listing: done
+  5-3-snapshot-re-resolution-hydration: done
+  5-4-visual-diff-engine-ui: done
+  epic-5-retrospective: optional
